# shotgun

./: .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  MAINTAINERS  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
etc/: report.yaml  short_report.yaml
shotgun/: __init__.py  cli.py  cli2.py  config.py  driver.py  manager.py  settings.py  utils.py
shotgun/test/: base.py  test_config.py  test_driver.py  test_manager.py  test_utils.py
specs/: shotgun.spec
