[metadata]
name = shotgun
version = 9.0.0
description-file = README.rst
description = Shotgun is diagnostic snapshot generator for Fuel
author = Mirantis Inc.
author_email = product@mirantis.com
home-page = http://mirantis.com
classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
     Programming Language :: Python
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7

[files]
packages = shotgun

[entry_points]
console_scripts =
     shotgun=shotgun.cli:main
     shotgun2=shotgun.cli2:main

shotgun =
     snapshot=shotgun.cli2:SnapshotCommand
     report=shotgun.cli2:ReportCommand

[global]
setup-hooks =
    pbr.hooks.setup_hook
    shotgun.hooks.setup_hook

[wheel]
python-tag = py2
